@@ -1835,6 +1835,11 @@ phpdbg_interact:
 				if (phpdbg_startup_run) {
 					quit_immediately = phpdbg_startup_run > 1;
 					phpdbg_startup_run = 0;
+					if (quit_immediately) {
+						PHPDBG_G(flags) |= PHPDBG_IS_INTERACTIVE | PHPDBG_PREVENT_INTERACTIVE;
+					} else {
+						PHPDBG_G(flags) |= PHPDBG_IS_INTERACTIVE;
+					}
 					PHPDBG_COMMAND_HANDLER(run)(NULL);
 					if (quit_immediately) {
 						/* if -r is on the command line more than once just quit */
